[package]
name = "bluetooth_mesh"
description = """
Cross-platform, full Bluetooth Mesh stack implemented in Rust. Following the Bluetooth Mesh Spec Core v1.0 by SIG.

Designed to work with any almost any BLE radio (uses https://github.com/AndrewGi/btle/ for
platform dependent Bluetooth drivers). While a stack is provided by the library, all the primatives and objects needed
to customize and create your own stack are provided.

See https://github.com/AndrewGi/BluetoothMeshRust for more.
"""
license = "GPL-3.0-only"
repository = "https://github.com/AndrewGi/BluetoothMeshRust"
version = "0.1.4"
authors = ["Andrew Gilbrough <andrew@gilbrough.com>"]
edition = "2018"
readme = "README.md"

[badges]
maintenance = {status ="actively-developed"}

[features]
default = ["full_stack"]
full_stack = ["std", "driver_async/tokio_asyncs", "futures-util"]
serde-1 = ["serde", "btle/serde-1"]
std = ["serde/std", "rand/std", "btle/std", "ring/std"]

[dependencies]
# Custom backends built for `bluetooth_mesh`
btle = {version = "0.1.4", path = "btle", default-features = false, features=["hci"]}
driver_async = {version = "0.0.3", path="async_driver", default-features = false}
# Common libraries
serde = {version = "1.0", default-features = false, features = ["derive"], optional = true }
futures-util = {version = "0.3", optional=true, default-features = false, features=["alloc"]}
# Used mostly for crypto key generation
rand = {version ="0.7", default-features = false}
# Crypto Libs
aes = "0.6"
cmac = "0.5"
aead = "0.3"
dbl = "0.3"
subtle = "2.3"
block-modes = "0.7"
ring = "0.17.0-alpha.4"
# Most crypto libs take generic-array inputs
generic-array = "0.14"
typenum = "1.12"
