[package]
name = "mesh_cli"
version = "0.1.0"
authors = ["AndrewGi <andrew@gilbrough.com>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluetooth_mesh = {path = "../", features=["full_stack", "serde"]}
clap = "2.33.0"
serde_json = "1.0.45"
slog = "2.5.2"
slog-term = "2.4.2"
tokio = {version = "0.2.11", features=["tcp"]}
futures = "0.3.3"
[target.'cfg(unix)'.dependencies]
btle = {path = "../btle", features= ["bluez_async"]}

[target.'cfg(not(unix))'.dependencies]
btle = {path = "../btle", features= ["async"]}