[package]
name = "mesh_cli"
version = "0.1.0"
authors = ["AndrewGi <andrew@gilbrough.com>"]
edition = "2018"
readme = "README.md"

[badges]
maintenance = {status ="actively-developed"}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluetooth_mesh = {path = "../", features=["full_stack", "serde-1"]}
clap = "2.33.0"
serde_json = "1.0.45"
slog = "2.5.2"
slog-term = "2.4.2"
tokio = {version = "0.2.12", features=["tcp", "time", "rt-threaded"]}
futures-core = {version = "0.3.4", default_features = false}
futures-io = {version = "0.3.4", default_features = false}
futures-util = {version = "0.3.4", default_features = false}
[target.'cfg(unix)'.dependencies]
btle = {path = "../btle", features= ["bluez_async"]}

[target.'cfg(not(unix))'.dependencies]
btle = {path = "../btle", features= ["async"]}