[package]
name = "mesh_cli"
version = "0.1.0"
authors = ["AndrewGi <andrew@gilbrough.com>"]
edition = "2018"
readme = "README.md"

[badges]
maintenance = {status ="actively-developed"}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["mesh", "pcap", "btle_usb", "btle_bluez"]
btle_usb = ["btle/hci_usb"]
btle_bluez = ["btle/bluez_socket"]
mesh = ["bluetooth_mesh"]
pcap = ["pcap-file"]

[dependencies]
bluetooth_mesh = {path = "../", features=["full_stack", "serde-1"], optional = true}
clap = "2.33.0"
serde_json = "1.0"
slog = "2.5.2"
slog-term = "2.4.2"
tokio = {version = "0.2.12", features=["tcp", "time", "rt-threaded"]}
futures-core = {version = "0.3.4", default_features = false}
futures-io = {version = "0.3.4", default_features = false}
futures-util = {version = "0.3.4", default_features = false}
driver_async = {version = "0.0.2", path="../async_driver"}
pcap-file =  {version = "1.1.1", optional = true}
libc = "0.2.69"
btle = {path = "../btle", features= ["std"]}
